--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 
+spring.jpa.hibernate.ddl-auto=create
+
+spring.datasource.url=jdbc:mysql://localhost:3306/ubsdata
+
+spring.datasource.username=admin
+
+spring.datasource.password=admin
